--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "description": "Autodesk Forge application demonstrating possible usage in industrial construction.",
   "scripts": {
+    "start": "node server.js"
   },
   "keywords": [
     "autodesk",
