--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "dependencies": {
     "express": "^4.16.4",
     "forge-nodejs-utils": "^0.4.0",
-    "pug": "^2.0.3"
+    "mongoose": "^5.5.3",
+    "pug": "^2.0.3",
+    "validator": "^10.11.0"
   }
 }
